# kung-fu-chess-server

./: .gitignore  README.md  conftest.py  engine.py  main.py  movement.py  pyproject.toml
client/: README.md  dialogs.py  main.py  server_bridge.py  shell_login.py  ui_config.py  user_settings.py
client/animation/: animation_clock.py  motion_predictor.py  piece_animator.py
client/graphics/: hud_renderer.py  overlay_renderer.py  piece_renderer.py  protocols.py  renderer.py  sprite_loader.py  window.py
client/network/: network_game_facade.py  ws_client.py
client/screens/: game_screen.py  home_screen.py  screen_manager.py
client/state/: game_events.py  game_facade.py  motion_tracker.py  observer.py  outcome_translator.py
client/tests/: conftest.py
client/ui_components/: cooldown_tracker.py  game_over_banner.py  halt_flash.py  moves_log_panel.py  opponent_status_tracker.py  player_labels.py  score_panel.py  sound_player.py
engine/: game_engine.py
game_engine_pkg/: game_engine.py
game_io/: board_parser.py  board_printer.py
model/: board.py  game_state.py  piece.py
realtime/: motion.py  real_time_arbiter.py
rules/: piece_rules.py  rule_engine.py
server/: config.py
server/bus/: event_bus.py
submit/: board.py  board_mapper.py  board_parser.py  board_printer.py  config.py  controller.py  game_engine.py  game_state.py  main.py  motion.py  piece.py  piece_rules.py  position.py  real_time_arbiter.py  rule_engine.py
tests/: test_game_engine.py  test_piece.py  test_piece_rules.py
ui/: README.md  main.py  settings.json  ui_config.py  user_settings.py
(+101 files in other folders)
