[project]
name = "kung-fu-chess"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=5.0.0.93",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "websockets>=16.1.1",
]

[tool.pytest.ini_options]
# server/ and client/ each have their own main.py (and other same-named modules) -
# the default "prepend" import mode makes pytest juggle sys.path per test file
# as it collects them, which silently lets one shadow the other depending on
# collection order (e.g. server/tests/unit/test_main.py, which does a bare
# `import main` expecting server/main.py). importlib mode gives every test
# module a proper qualified name instead, sidestepping the collision entirely.
addopts = "--import-mode=importlib"
# Lets async def test_*/fixture functions (server/net's WS tests) run as
# coroutines without a @pytest.mark.asyncio on every single one.
asyncio_mode = "auto"

[tool.pyright]
# client/ scripts add server/ to sys.path at runtime (see client/server_bridge.py);
# tell the language server about it too, so its bare imports (`from model.board
# import Board`, `from config import CELL_SIZE`, etc.) resolve instead of showing
# as unresolved-import warnings.
extraPaths = ["server", "client"]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.4.0",
]
